samples/_failures_safe/1761261642_1565d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c201759.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_4c201759.c:151:26: error: expected ‘;’ at end of input
  151 |     for (int i = 0; i < g
      |                          ^
      |                          ;
./samples/SAFE/__tmp_4c201759.c:151:5: error: expected declaration or statement at end of input
  151 |     for (int i = 0; i < g
      |     ^~~
